# ad688-group1-job-market-analysis-f25

./: .gitignore  .nojekyll  README.md  _config.yml  _quarto.yml  about.html  about.qmd  ai_vs_traditional.html  career_plan.html  gender_politics.html  index.html  index.qmd  pyproject.toml  references.bib  requirements.txt  research_introduction.html  research_introduction.qmd  robots.txt  search.json  sitemap.xml  styles.css  team_analysis.html
,github/workflows/: quarto-publish.yml
.github/workflows/: quarto-publish.yml
_site/: about.html  ai_vs_traditional.html  career_plan.html  gender_politics.html  index.html  research_introduction.html  team_analysis.html
ad688-group1-f25/: _quarto.yml
