[project]
name = "ad688-group1-job-market-analysis-f25"
version = "0.1.0"
description = ""
authors = [
    {name = "BdeGouw AWS",email = "161638964+bdegouw@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
